objects/S1_RFA_Configurations__mdt.object
<CustomObject>
    <description>US 5496291: Custom Metadata to Store Configurational Changes for RFA apex classes</description>
    <fields>
        <fullName>Division_Name__c</fullName>
        <description>Field to store the name of the division i.e. division sent from field</description>
        <label>Division Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email_Body_Prefix__c</fullName>
        <description>Define the email body to be appended before response</description>
        <label>Email Body Prefix</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Subject__c</fullName>
        <description>define the subject of email to be sent</description>
        <label>Email Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter_String__c</fullName>
        <description>Filter applied to Request and response objects when querying the data to sync</description>
        <label>Filter String</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>From_Email_Address__c</fullName>
        <description>Email address to be used while sending notification emails to the Request owner, this address should be configured as an Organization-Wide Address</description>
        <label>From Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Fields__c</fullName>
        <description>Field to store all the fields to be synced with hub (existing fields can be removed but to add new fields wrapper needs to be updated)</description>
        <label>Request Fields</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_Object_API__c</fullName>
        <description>Field to store the API name for request Object</description>
        <label>Request Object API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Child_API__c</fullName>
        <description>Field to store the API name of the child relationship response</description>
        <label>Response Child API</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Response_Fields__c</fullName>
        <description>Field to store all the fields to be synced with the hub (existing fields can be removed but to add new fields wrapper needs to be updated)</description>
        <label>Response Fields</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Object_API__c</fullName>
        <description>Field to store Response object API name</description>
        <label>Response Object API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Email_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>if checked, Email notifications will be sent on Rest API execution</description>
        <label>Send Email Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub_Divisions__c</fullName>
        <label>Sub Divisions</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>To_Email_Address__c</fullName>
        <description>Email address to send the notifications in case of success and failure</description>
        <label>To Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>S1 RFA Configuration</label>
    <pluralLabel>S1 RFA Configurations</pluralLabel>
</CustomObject>